Fix z-index issue on dropdown + class collision on progress menu

--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -86,6 +86,6 @@ h1, h2, h3, h4, p, a, a:link, a:link:hover, a:link:focus {
 	@include flex-direction(column);
 }
 
-.content-wrapper {
-	flex: 1;
+.xmodule_display.xmodule_SequenceModule .sequence-nav {
+	z-index: 0;
 }
